test/Fail/Sections-6.agda
open import Common.Prelude

test : Nat → Nat
test = __+ 2
