test/Fail/Sections-6.err
Sections-6.agda:4.12: error: [ParseError]
a name cannot contain two consecutive underscores
